@@ -1,10 +1,10 @@
 Package: gems
 Type: Package
 Title: General multistate simulation model
-Version: 0.82
-Date: 2012-08-14
+Version: 0.83
+Date: 2012-12-27
 Author: Luisa Salazar Vizcaya, Nello Blaser, Thomas Gsponer
 Maintainer: Luisa Salazar Vizcaya <lsalazar@ispm.unibe.ch>
-Depends: MASS, methods, msm, mstate
+Depends: MASS, methods, msm, mstate, plyr
 Description: This package allows to simulating and analyzing multistate models with general hazard functions. It provides functionality for the preparation of hazard functions and parameters, simulation from a general multistate model and predicting future events. The multistate model is not required to be a Markov model and may take the history of previous events into account. In the basic version, it allows to simulate from transition-specific hazard function, whose parameters are multivariable normally distributed.
 License: GPL-2
